# FTP-Transfers

./: .gitignore  Job.py  Padder.py  Photo.py  QueueManager.py  config.ini  main.py  pyproject.toml  requirements.txt  setup_exiftool.sh  watcher_config.ini
